Added pagination + preformance
Well the localstorage thing is not working, but i have pagination with nromal queries